// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/switch/demo/basic.md correctly 1`] = `
<span
  class="ant-switch ant-switch-checked"
  tabindex="0"
>
  <span
    class="ant-switch-inner"
  />
</span>
`;

exports[`renders ./components/switch/demo/disabled.md correctly 1`] = `
<div>
  <span
    class="ant-switch ant-switch-checked ant-switch-disabled"
    tabindex="-1"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
  <br />
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>
</div>
`;

exports[`renders ./components/switch/demo/loading.md correctly 1`] = `
<div>
  <span
    class="ant-switch-loading ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
  <br />
  <span
    class="ant-switch-small ant-switch-loading ant-switch"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/switch/demo/size.md correctly 1`] = `
<div>
  <span
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
  <br />
  <span
    class="ant-switch-small ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/switch/demo/text.md correctly 1`] = `
<div>
  <span
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    >
      开
    </span>
  </span>
  <br />
  <span
    class="ant-switch"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    >
      0
    </span>
  </span>
  <br />
  <span
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    >
      <i
        class="anticon anticon-check"
      />
    </span>
  </span>
</div>
`;
